--- a/README.rmd
+++ b/README.rmd
@@ -20,9 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Known issues with `italicize.plot`:
 
- - does not support bold font face
- - create multiple legend guides
- - supported elemnets: axis labels, axis names, color, fill
+ - overwrites bold font face
  
 ### Aesthetics
 
@@ -59,7 +57,9 @@ p <- ggplot(iris, aes(x=Species, y=Sepal.Width, color=Species)) +
     geom_boxplot() +
     scale_color_manual(values=colors) +
     theme_bw_ge()
-italicize.plot(p, 'setosa')
+
+g <- italicize.plot(p, string = c('setosa', 'versicolor'))
+plot(g)
 ```
 
 
