use geom implementation

--- a/README.rmd
+++ b/README.rmd
@@ -30,6 +30,9 @@ Known issues with `italicize.plot`:
 
  - `theme_bw_ge`
  - `theme_classic_ge`
+ - `theme_umap_ge`
+ 
+ Known issue with `theme_umap_ge`: this is a function returns a list of `geom_text`, `geom_segment` and `theme_void()`. Better implementation should define `element_line_umap` that can be used in `theme(axis.line)`
  
 ### Installation
 ```{r install, eval=FALSE}
@@ -87,9 +90,16 @@ ggplot(iris, aes(x=Sepal.Length, y=Sepal.Width, fill=Species)) +
     scale_fill_ge()
 ```
 
-#### Simplified axes (for UMAP plots)
+#### Simplified axes (for UMAP plots) 
 
-TODO: I would prefer a "ggploty" way of doing this. Prof. Guangchuang Yu suggested using a `element_line_umap` element to draw `axis.line`
+```{r}
+ggplot(iris, aes(x=Sepal.Length, y=Sepal.Width, color=Species)) + 
+    geom_point() +
+    theme_umap_ge()
+```
+
+Another implementation [will be replaced by `theme_umap_ge` soon]
+
 
 ```{r}
 g <- ggplot(iris, aes(x=Sepal.Length, y=Sepal.Width, color=Species)) + 
